# glib

./: .gitignore  Makefile.am  README.md  config.h.win32.in  configure.ac  deploy.bat  glib-common.props  glib.sln  meson.build  meson_options.txt  msvc_recommended_pragmas.h
.gitlab-ci/: coverity-model.c
gio/: Makefile.am  gapplication-tool.c  gcontenttype.c  gcredentials.c  gdbus-tool.c  gdbusaddress.c  gdbusauth.c  gdbusconnection.c  gdbusconnection.h  gdbuserror.c  gdbuserror.h  gdbusinterfaceskeleton.c  gdbusprivate.c  gdesktopappinfo.c  gfile.c  ginetaddress.c  gio-fork.c  gio-fork.h  gio-init.c  gio-init.h  gio-launch-desktop.c  gio-querymodules.c  gio-tool.c  gio.h  gio.hsproj  giomodule.c  giounix-private.c  gkeyfilesettingsbackend.c  glib-compile-resources.c  glib-compile-schemas.c  glocalfile.c  glocalfileinfo.c  gnetworkaddress.c  gnetworking.c  gnetworking.h.in  gnetworkmonitornetlink.c  gregistrysettingsbackend.c  gresource-tool.c  gsettings-tool.c  gsocket.c  (+20 more)
gio/win32/: gwinhttpvfs.c  meson.build
gio/xdgmime/: Makefile.am  meson.build  xdgmimecache.c  xdgmimeint.h
glib/: Makefile.am  garray.c  gatomic.c  gatomic.h  gbacktrace.c  gbookmarkfile.c  gconstructor.h  gconvert.c  gdatetime.c  gdir.c  genviron.c  gerror.c  gfileutils.c  ghostutils.c  giochannel.c  giochannel.h  glib-fork.c  glib-fork.h  glib-init.c  glib-init.h  glib-nolog.h  glib-object.h  glib-private.c  glib-unix.c  glib.h  glib.hsproj  glibconfig.h.in  glist.c  gmacros.h  gmain.c  gmem.c  gmem.h  gmessages.c  gmessages.h  gplatformaudit.c  gplatformaudit.h  gpoll.c  gpoll.h  gprintf.c  (+45 more)
(+74 files in other folders)
